fixed gaps fr this time

--- a/styles/blog-list.css
+++ b/styles/blog-list.css
@@ -14,7 +14,7 @@
 .posts {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.25rem;
 }
 
 .post-info .post-title {
